cpp/say/run-tests-cpp.txt
Running automated test file(s):


===============================================================================

Running: make clean
rm -rf ./build

real	0m0.008s
user	0m0.001s
sys	0m0.007s

===============================================================================

export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"

===============================================================================

Running: make coverage | ansifilter
rm -rf ./build
mkdir -pv ./build
mkdir: created directory './build'

cd ./build; export LDFLAGS="-lgcov --coverage" CXXFLAGS="--coverage"; cmake -DEXERCISM_RUN_ALL_TESTS=1 -DCMAKE_EXPORT_COMPILE_COMMANDS=1 -G 'Unix Makefiles' ../; if make; then printf "\n=== All Tests Passed ===\n"; else printf "\n=== Test Failure ===\n"; false; fi
-- The CXX compiler identification is GNU 10.2.1
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Configuring done
-- Generating done
-- Build files have been written to: /home/vpayno/git_vpayno/exercism-workspace/cpp/say/build
make[1]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
make[2]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
[ 25%] Building CXX object CMakeFiles/say.dir/say_test.cpp.o
[ 50%] Building CXX object CMakeFiles/say.dir/say.cpp.o
[ 75%] Building CXX object CMakeFiles/say.dir/test/tests-main.cpp.o
[100%] Linking CXX executable say
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
[100%] Built target say
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
make[3]: Entering directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
===============================================================================
All tests passed (17 assertions in 17 test cases)

make[3]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
[100%] Built target test_say
make[2]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'
make[1]: Leaving directory '/home/vpayno/git_vpayno/exercism-workspace/cpp/say/build'

=== All Tests Passed ===

find . -regextype posix-egrep -regex '^.*(tests-main|CompilerId).*[.](gcda|gcno)$' -print -delete
./build/CMakeFiles/3.22.2/CompilerIdCXX/CMakeCXXCompilerId.gcno
./build/CMakeFiles/say.dir/test/tests-main.cpp.gcno
./build/CMakeFiles/say.dir/test/tests-main.cpp.gcda

find . -regextype posix-egrep -regex '^.*[.](gcda|gcno)$'
./build/CMakeFiles/say.dir/say_test.cpp.gcno
./build/CMakeFiles/say.dir/say.cpp.gcno
./build/CMakeFiles/say.dir/say.cpp.gcda
./build/CMakeFiles/say.dir/say_test.cpp.gcda

gcovr --print-summary
------------------------------------------------------------------------------
                           GCC Code Coverage Report
Directory: .
------------------------------------------------------------------------------
File                                       Lines    Exec  Cover   Missing
------------------------------------------------------------------------------
say.cpp                                       98      97    99%   80
say_test.cpp                                  37      37   100%   
test/catch.hpp                                34      27    79%   1642-1643,1710-1711,2227,2229,2560
------------------------------------------------------------------------------
TOTAL                                        169     161    95%
------------------------------------------------------------------------------
lines: 95.3% (161 out of 169)
branches: 44.8% (249 out of 556)

real	0m11.187s
user	0m10.279s
sys	0m0.905s

===============================================================================

cmake-format --in-place CMakeLists.txt
WARNING config_util.py:307: The following configuration options were ignored:
  max_subargs_per_line

real	0m0.169s
user	0m0.113s
sys	0m0.059s

===============================================================================

cmake-lint CMakeLists.txt
WARNING The following configuration options were ignored:
  max_subargs_per_line
CMakeLists.txt
==============
CMakeLists.txt:15,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:17,06: [C0103] Invalid directory variable name "exercise_cpp" doesn't match `[A-Z][0-9A-Z_]+|_[0-9a-z_]+`
CMakeLists.txt:61,02: [C0113] Missing COMMENT in statement which allows it

Summary
=======
files scanned: 1
found lint:
  Convention: 3


real	0m0.156s
user	0m0.118s
sys	0m0.040s

===============================================================================

Running: clang-format-16 -style=file -i ./say.cpp ./say_test.cpp ./say.h

real	0m0.025s
user	0m0.012s
sys	0m0.012s

===============================================================================

Running: ../../.github/citools/cpp/clang-check
clang-check-16 --analyze ./say.cpp ./say_test.cpp ./say.h
error: argument unused during compilation: '-stdlib=libstdc++' [-Werror,-Wunused-command-line-argument]
error: invalid argument '-std=c++17' not allowed with 'C'
/home/vpayno/git_vpayno/exercism-workspace/cpp/say/say.h:4:10: fatal error: 'map' file not found
#include <map>
         ^~~~~
1 error generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/say/say.h.

real	0m3.810s
user	0m3.679s
sys	0m0.131s


real	0m3.812s
user	0m3.679s
sys	0m0.133s

===============================================================================

Running: ../../.github/citools/cpp/clang-tidy | head -n 100
78380 warnings generated.
163401 warnings generated.
201780 warnings and 3 errors generated.
Error while processing /home/vpayno/git_vpayno/exercism-workspace/cpp/say/say.h.
Suppressed 201785 warnings (201780 in non-user code, 5 NOLINT).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
Found compiler error(s).

real	0m35.186s
user	0m34.946s
sys	0m0.238s
Running: clang-tidy-16 ./say.cpp ./say_test.cpp ./say.h
error: invalid argument '-std=c++17' not allowed with 'C' [clang-diagnostic-error]
error: argument unused during compilation: '-stdlib=libstdc++' [clang-diagnostic-unused-command-line-argument]
/home/vpayno/git_vpayno/exercism-workspace/cpp/say/say.h:4:10: error: 'map' file not found [clang-diagnostic-error]
#include <map>
         ^~~~~


real	0m35.189s
user	0m34.947s
sys	0m0.241s

===============================================================================

